--- a/framework/navs.html
+++ b/framework/navs.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+    <!-- never forget to use this meta tag *essential* -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- the nav stylesheets file -->
     <link rel="stylesheet" type="text/css" href="navs.css">
     </head>
@@ -11,9 +14,9 @@
     <!-- building the framework -->
     
     <div class="nav_yakine">
-        <div class="nav_item item-third">First</div>
-        <div class="nav_item item-second">Second</div>
-        <div class="nav_item item-first">Third</div>
+        <div class="nav_item item-second item-vertical">Home</div>
+        <div class="nav_item item-third item-vertical">About</div>
+        <div class="nav_item item-first item-vertical">Framework</div>
     </div>
     
     <!-- building the frame work -->
