--- a/framework/navs.html
+++ b/framework/navs.html
@@ -14,9 +14,9 @@
     <!-- building the framework -->
     
     <div class="nav_yakine">
-        <div class="nav_item item-second item-vertical">Home</div>
-        <div class="nav_item item-third item-vertical">About</div>
-        <div class="nav_item item-first item-vertical">Framework</div>
+        <div class="nav_item item-third">Home</div>
+        <div class="nav_item item-second">About us</div>
+        <div class="nav_item item-first">Projects</div>
     </div>
     
     <!-- building the frame work -->
